Mozilla's Universal Charset Detector C/C++ library


*** 1.0.6


*** 1.0.5

2016/05/11 KST
	- release 1.0.5
	- fixed #6 can not detect EUC extended area

2016/05/05 KST
	- fixed #5 no detect control character on US-ASCII
	- fixed #7 wrong detect Danash ISO-8859-15
	- fixed #8 fixed binary safe problems
	  . replace detect to detect_r
	  . replace detect_handledata to detect_handledata_r

2016/05/04 KST
	- fixed #1 separate model directory
	- merge uchardet's improvement
	  . fixed #2 Improve single-byte charset detection confidence algorithm
	  . fixed #3 update model of Greek, Hungarian and Thai
	  . fixed #4 new language model (Arabic, Danish, Esperanto, German, Spanish,
	             Turkish, Vietnamese)

2015/12/10 KST
	- fixed man pages wrong macro bug (martin.gansser@gmail.com)


*** 1.0.4

2014/02/14 KST
	- fixed duplicated path on chardet.pc
	- release 1.0.4

2014/02/13 KST
	- support windows native library with MinGW
	- support Code::Blocks project

2014/02/11 KST
	- fixed build error and shared library on cygwin


*** 1.0.3

2014/02/10 KST
	- add chardet.pc by Lee ByungYoung <darklin20@gamil.com>
	- applied automake
	- add english man page

2012/08/14 KST
	- fixed comparison on JpCntx.cpp


*** 1.0.2

2010/07/05 KST
	- support visibility attribute on gcc4.
	- add version information api


*** 1.0.1

2009/02/23 KST
	- fix wrong detect TIS-620 charset
	- release 1.0.1


*** 1.0.0

2009/02/23 KST JoungKyun.Kim <http://oops.org>
	- add version constant

2009/02/22 KST JoungKyun.Kim <http://oops.org>
	- release 1.0.0 based on perl Encode-Detect-1.01
